--- a/index.html
+++ b/index.html
@@ -1,25 +1,369 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <link rel="stylesheet" href="./css/styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-</head>
-<body>
-    <header></header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tienda A</title>
+    <meta name="author" content="Florencia Santucho" />
+    <meta
+      name="description"
+      content="Tienda de ropa A para mujeres y hombres."
+    />
+    <meta
+      name="keywords"
+      content="tienda de ropa, ropa para mujeres, ropa para hombres"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="./assets/Logotipo.png" alt="logo a" class="logo-nav" />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Hombre</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Mujer</a>
+              </li>
+                </ul>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input
+                class="form-control me-2"
+                type="search"
+                placeholder="Buscar..."
+                aria-label="Search"
+              />
+              <button class="btn btn-outline-success" type="submit">
+                <i class="fa-solid fa-magnifying-glass"></i>
+              </button>
+            </form>
+            <i class="fa-solid fa-cart-shopping"></i>
+          </div>
+        </div>
+      </nav>
+    </header>
     <main>
-        <section>
-            <div></div>
-        </section>
+      <section>
+        <div id="carouselExample" class="carousel slide">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./assets/portada/1.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/portada/2.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/portada/3.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+      </section>
 
-        <section>
-            <div></div>
-        </section>
+      <section class="container mt-3">
+        <div class="row categorias g-5">
+            <div class="col-6 col-sm-6 col-lg-3">
+                <img src="./assets/categorias/abrigos.jpg" alt="abrigos invierno">
+                <p>ABRIGOS</p>
+            </div>
+            <div class="col-6 col-sm-6 col-lg-3">
+                <a href=""> <!-- linkear -->
+                <img src="./assets/categorias/buzos.jpg" alt="buzos">
+            </a>
+                <p>BUZOS</p>
+            </div>
+            <div class="col-6 col-sm-6 col-lg-3">
+                <img src="./assets/categorias/pantalones.jpg" alt="pantalones">
+                <p>PANTALONES</p>
+            </div>
+            <div class="col-6 col-sm-6 col-lg-3">
+                <img src="./assets/categorias/remeras.jpg" alt="remeras">
+                <p>REMERAS</p>
+            </div>
+        </div>
+      </section>
+      <section class="container-fluid seccion-envio">
+        <p><i class="fa-solid fa-truck-fast"></i> Envío gratis a todo el país.</p>
+      </section>
+      <h2 class="text-center m-5">PRODUCTOS DESTACADOS</h2>
+      <section
+        class="container d-flex justify-content-center imagenes-categoria"
+      >
+        <article class="row">
+          <div
+            class="col-6 col-md-6 col-lg-3 mb-3 d-flex justify-content-between text-center"
+          >
+            <div class="card">
+              <a href="./pages/samsunga14.html">
+              <img
+                src="../assets/Samsung-A14.avif"
+                class="card-img-top"
+                alt="Samsung A14"
+              />
+            </a>
+              <div class="card-body">
+                <h5 class="card-title">Samsung A14</h5>
+                <b class="card-text">$ 359.999</b>
+                  <p class="text-success">
+                    6 cuotas sin interés de $59.999.83</br>
+                    <b>Envío gratis</b>
+                  </p>
+
+                </p>
+                <a href="./pages/samsunga14.html" class="btn boton-conocermas"
+                  >Comprar</a
+                >
+              </div>
+            </div>
+          </div>
+          <div
+            class="col-6 col-md-6 col-lg-3 mb-3 d-flex justify-content-between text-center"
+          >
+            <div class="card">
+              <a href="./pages/samsunga24.html">
+              <img
+                src="../assets/Samsung-A24.avif"
+                class="card-img-top"
+                alt="Samsung A24"
+              />
+            </a>
+              <div class="card-body">
+                <h5 class="card-title">Samsung A24</h5>
+                <b class="card-text">$ 524.999</b>
+                  <p class="text-success">
+                    6 cuotas sin interés de $87.499,83</br>
+                    <b>Envío gratis</b>
+                  </p>
+                <a href="./pages/samsunga24.html" class="btn boton-conocermas"
+                  >Comprar</a
+                >
+              </div>
+            </div>
+          </div>
+          <div
+            class="col-6 col-md-6 col-lg-3 mb-3 d-flex justify-content-between text-center"
+          >
+            <div class="card">
+              <a href="./pages/error404.html">
+              <img
+                src="../assets/Samsung-A04.avif"
+                class="card-img-top"
+                alt="Samsung A04S"
+              />
+            </a>
+              <div class="card-body">
+                <h5 class="card-title">Samsung A04S</h5>
+                <b class="card-text">$ 314.999</b>
+                  <p class="text-success">
+                    6 cuotas sin interés de $52.500</br>
+                    <b>Envío gratis</b>
+                  </p>
+                <a href="./pages/error404.html" class="btn boton-conocermas">Comprar</a>
+              </div>
+            </div>
+          </div>
+          <div
+            class="col-6 col-md-6 col-lg-3 mb-3 d-flex justify-content-between text-center"
+          >
+            <div class="card">
+              <a href="./pages/error404.html">
+              <img
+                src="../assets/Samsung-A145G.avif"
+                class="card-img-top"
+                alt="Samsung A145G"
+              />
+            </a>
+              <div class="card-body">
+                <h5 class="card-title">Samsung A14 5G</h5>
+                <b class="card-text">$ 369.999</b>
+                  <p class="text-success">
+                    6 cuotas sin interés de $123.333</br>
+                    <b>Envío gratis</b>
+                  </p>
+                <a href="./pages/error404.html" class="btn boton-conocermas">Comprar</a>
+              </div>
+            </div>
+          </div>
+        </article>
+      </section>
+
+      <section class="container banners">
+        <div class="row g-3">
+            <div class="col-12 col-lg-6">
+                <img src="./assets/banners/1.jpg" alt="banner hombre">
+            
+            </div>
+            <div class="col-12 col-lg-6">
+                <img src="./assets/banners/2.jpg" alt="banner mujer">
+            </div>
+        </div>
+
+      </section>
+
+      <h2 class="text-center m-5">NOVEDADES</h2>
+      <section
+        class="container d-flex justify-content-center imagenes-categoria"
+      >
+        <article class="row">
+          <div
+            class="col-6 col-md-6 col-lg-3 mb-3 d-flex justify-content-between text-center"
+          >
+            <div class="card">
+              <a href="./pages/samsunga14.html">
+              <img
+                src="../assets/Samsung-A14.avif"
+                class="card-img-top"
+                alt="Samsung A14"
+              />
+            </a>
+              <div class="card-body">
+                <h5 class="card-title">Samsung A14</h5>
+                <b class="card-text">$ 359.999</b>
+                  <p class="text-success">
+                    6 cuotas sin interés de $59.999.83</br>
+                    <b>Envío gratis</b>
+                  </p>
+
+                </p>
+                <a href="./pages/samsunga14.html" class="btn boton-conocermas"
+                  >Comprar</a
+                >
+              </div>
+            </div>
+          </div>
+          <div
+            class="col-6 col-md-6 col-lg-3 mb-3 d-flex justify-content-between text-center"
+          >
+            <div class="card">
+              <a href="./pages/samsunga24.html">
+              <img
+                src="../assets/Samsung-A24.avif"
+                class="card-img-top"
+                alt="Samsung A24"
+              />
+            </a>
+              <div class="card-body">
+                <h5 class="card-title">Samsung A24</h5>
+                <b class="card-text">$ 524.999</b>
+                  <p class="text-success">
+                    6 cuotas sin interés de $87.499,83</br>
+                    <b>Envío gratis</b>
+                  </p>
+                <a href="./pages/samsunga24.html" class="btn boton-conocermas"
+                  >Comprar</a
+                >
+              </div>
+            </div>
+          </div>
+          <div
+            class="col-6 col-md-6 col-lg-3 mb-3 d-flex justify-content-between text-center"
+          >
+            <div class="card">
+              <a href="./pages/error404.html">
+              <img
+                src="../assets/Samsung-A04.avif"
+                class="card-img-top"
+                alt="Samsung A04S"
+              />
+            </a>
+              <div class="card-body">
+                <h5 class="card-title">Samsung A04S</h5>
+                <b class="card-text">$ 314.999</b>
+                  <p class="text-success">
+                    6 cuotas sin interés de $52.500</br>
+                    <b>Envío gratis</b>
+                  </p>
+                <a href="./pages/error404.html" class="btn boton-conocermas">Comprar</a>
+              </div>
+            </div>
+          </div>
+          <div
+            class="col-6 col-md-6 col-lg-3 mb-3 d-flex justify-content-between text-center"
+          >
+            <div class="card">
+              <a href="./pages/error404.html">
+              <img
+                src="../assets/Samsung-A145G.avif"
+                class="card-img-top"
+                alt="Samsung A145G"
+              />
+            </a>
+              <div class="card-body">
+                <h5 class="card-title">Samsung A14 5G</h5>
+                <b class="card-text">$ 369.999</b>
+                  <p class="text-success">
+                    6 cuotas sin interés de $123.333</br>
+                    <b>Envío gratis</b>
+                  </p>
+                <a href="./pages/error404.html" class="btn boton-conocermas">Comprar</a>
+              </div>
+            </div>
+          </div>
+        </article>
+      </section>
     </main>
-    <footer></footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
+    <footer>
+        <section class="container-fluid footer-1">
+            <div class="row">
+            <div class="col-12 col-lg-6"> 
+                <p>CONTÁCTANOS.</p>
+                <p>+5493819999</p>
+                <p>info@atienda.com</p>
+            </div>
+            <div class="col-12 col-lg-6 redes">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-square-instagram"></i>
+
+            </div>
+        </div>
+        </section>
+        <section class="footer-2">
+            <p>MEDIOS DE PAGO</p>
+            <img src="./assets/FINANCIACION.webp" alt="financiacion">
+        </section>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/197fc6dc83.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
