subo resto de mi codigo html, con la creacion de mi carpeta pages, correciones a mi html y vinculacion de sass a mi css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tienda A</title>
+    <title>A Boutique</title>
     <meta name="author" content="Florencia Santucho" />
     <meta
       name="description"
@@ -45,13 +45,10 @@
                 <a class="nav-link active" aria-current="page" href="#">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Hombre</a>
+                <a class="nav-link" href="./pages/hombre.html">Hombre</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Mujer</a>
-              </li>
-                </ul>
-              </li>
+                <a class="nav-link" href="./pages/mujer.html">Mujer</a>
             </ul>
             <form class="d-flex" role="search">
               <input
@@ -93,33 +90,42 @@
             </button>
           </div>
       </section>
+      <section>
+        <h1 class="text-center"> <i><strong>Categorias</strong></i></h1>
+      </section>
 
       <section class="container mt-3">
         <div class="row categorias g-5">
-            <div class="col-6 col-sm-6 col-lg-3">
+            <div class="col-6 col-sm-6 col-lg-3 card">
+              <a href="./pages/abrigosm.html">
                 <img src="./assets/categorias/abrigos.jpg" alt="abrigos invierno">
-                <p>ABRIGOS</p>
+              </a>
+                <h2>ABRIGOS</h2>
             </div>
-            <div class="col-6 col-sm-6 col-lg-3">
-                <a href=""> <!-- linkear -->
+            <div class="col-6 col-sm-6 col-lg-3 card">
+                <a href="./pages/buzosm.html">
                 <img src="./assets/categorias/buzos.jpg" alt="buzos">
             </a>
-                <p>BUZOS</p>
+                <h2>BUZOS</h2>
             </div>
-            <div class="col-6 col-sm-6 col-lg-3">
+            <div class="col-6 col-sm-6 col-lg-3 card">
+              <a href="./pages/pantalonesm.html">
                 <img src="./assets/categorias/pantalones.jpg" alt="pantalones">
-                <p>PANTALONES</p>
+              </a>
+                <h2>PANTALONES</h2>
             </div>
-            <div class="col-6 col-sm-6 col-lg-3">
+            <div class="col-6 col-sm-6 col-lg-3 card">
+              <a href="./pages/remerasm.html">
                 <img src="./assets/categorias/remeras.jpg" alt="remeras">
-                <p>REMERAS</p>
+              </a>
+                <h2>REMERAS</h2>
             </div>
         </div>
       </section>
       <section class="container-fluid seccion-envio">
         <p><i class="fa-solid fa-truck-fast"></i> Envío gratis a todo el país.</p>
       </section>
-      <h2 class="text-center m-5">PRODUCTOS DESTACADOS</h2>
+      <h3 class="text-center m-5">PRODUCTOS DESTACADOS</h3>
       <section
         class="container d-flex justify-content-center imagenes-categoria"
       >
@@ -128,47 +134,23 @@
             class="col-6 col-md-6 col-lg-3 mb-3 d-flex justify-content-between text-center"
           >
             <div class="card">
-              <a href="./pages/samsunga14.html">
+              <a href="./pages/error404.html">
               <img
-                src="../assets/Samsung-A14.avif"
+                src="./assets/mujeres/pantalones/6.jpg"
                 class="card-img-top"
-                alt="Samsung A14"
+                alt="abrigo de mujer"
               />
             </a>
               <div class="card-body">
-                <h5 class="card-title">Samsung A14</h5>
-                <b class="card-text">$ 359.999</b>
+                <h5 class="card-title">Cargo Natural</h5>
+                <b class="card-text">$ 17.999</b>
                   <p class="text-success">
-                    6 cuotas sin interés de $59.999.83</br>
+                    6 cuotas sin interés de $ 2.999.83</br>
                     <b>Envío gratis</b>
                   </p>
 
                 </p>
-                <a href="./pages/samsunga14.html" class="btn boton-conocermas"
-                  >Comprar</a
-                >
-              </div>
-            </div>
-          </div>
-          <div
-            class="col-6 col-md-6 col-lg-3 mb-3 d-flex justify-content-between text-center"
-          >
-            <div class="card">
-              <a href="./pages/samsunga24.html">
-              <img
-                src="../assets/Samsung-A24.avif"
-                class="card-img-top"
-                alt="Samsung A24"
-              />
-            </a>
-              <div class="card-body">
-                <h5 class="card-title">Samsung A24</h5>
-                <b class="card-text">$ 524.999</b>
-                  <p class="text-success">
-                    6 cuotas sin interés de $87.499,83</br>
-                    <b>Envío gratis</b>
-                  </p>
-                <a href="./pages/samsunga24.html" class="btn boton-conocermas"
+                <a href="./pages/error404.html" class="btn boton-conocermas"
                   >Comprar</a
                 >
               </div>
@@ -180,16 +162,40 @@
             <div class="card">
               <a href="./pages/error404.html">
               <img
-                src="../assets/Samsung-A04.avif"
+                src="./assets/hombres/buzos/1.jpg"
                 class="card-img-top"
-                alt="Samsung A04S"
+                alt="Bifaz masculino de corderito"
               />
             </a>
               <div class="card-body">
-                <h5 class="card-title">Samsung A04S</h5>
-                <b class="card-text">$ 314.999</b>
+                <h5 class="card-title">Bifaz Cordero</h5>
+                <b class="card-text">$ 24.999</b>
                   <p class="text-success">
-                    6 cuotas sin interés de $52.500</br>
+                    6 cuotas sin interés de $ 4.166,5</br>
+                    <b>Envío gratis</b>
+                  </p>
+                <a href="./pages/error404.html" class="btn boton-conocermas"
+                  >Comprar</a
+                >
+              </div>
+            </div>
+          </div>
+          <div
+            class="col-6 col-md-6 col-lg-3 mb-3 d-flex justify-content-between text-center"
+          >
+            <div class="card">
+              <a href="./pages/error404.html">
+              <img
+                src="./assets/mujeres/abrigos/8.jpg"
+                class="card-img-top"
+                alt="Abrigo de mujer"
+              />
+            </a>
+              <div class="card-body">
+                <h5 class="card-title">Campera de Corderito</h5>
+                <b class="card-text">$ 34.999</b>
+                  <p class="text-success">
+                    6 cuotas sin interés de $ 5.833,16</br>
                     <b>Envío gratis</b>
                   </p>
                 <a href="./pages/error404.html" class="btn boton-conocermas">Comprar</a>
@@ -202,16 +208,16 @@
             <div class="card">
               <a href="./pages/error404.html">
               <img
-                src="../assets/Samsung-A145G.avif"
+                src="./assets/hombres/remeras/2.jpg"
                 class="card-img-top"
-                alt="Samsung A145G"
+                alt="Sudadera blanca basica de hombre"
               />
             </a>
               <div class="card-body">
-                <h5 class="card-title">Samsung A14 5G</h5>
-                <b class="card-text">$ 369.999</b>
+                <h5 class="card-title">Sudadera Blanca</h5>
+                <b class="card-text">$ 14.999</b>
                   <p class="text-success">
-                    6 cuotas sin interés de $123.333</br>
+                    6 cuotas sin interés de $ 2.499,99</br>
                     <b>Envío gratis</b>
                   </p>
                 <a href="./pages/error404.html" class="btn boton-conocermas">Comprar</a>
@@ -223,18 +229,22 @@
 
       <section class="container banners">
         <div class="row g-3">
-            <div class="col-12 col-lg-6">
+            <div class="col-12 col-lg-6 card">
+              <a href="./pages/hombre.html">
                 <img src="./assets/banners/1.jpg" alt="banner hombre">
+              </a>
             
             </div>
-            <div class="col-12 col-lg-6">
+            <div class="col-12 col-lg-6 card">
+              <a href="./pages/mujer.html">
                 <img src="./assets/banners/2.jpg" alt="banner mujer">
+              </a>
             </div>
         </div>
 
       </section>
 
-      <h2 class="text-center m-5">NOVEDADES</h2>
+      <h3 class="text-center m-5">NOVEDADES</h3>
       <section
         class="container d-flex justify-content-center imagenes-categoria"
       >
@@ -243,25 +253,24 @@
             class="col-6 col-md-6 col-lg-3 mb-3 d-flex justify-content-between text-center"
           >
             <div class="card">
-              <a href="./pages/samsunga14.html">
+              <a href="./pages/error404.html">
               <img
-                src="../assets/Samsung-A14.avif"
+                src="./assets/mujeres/buzos/1.jpg"
                 class="card-img-top"
-                alt="Samsung A14"
+                alt="Buzo de mujer blanco y negro a rayas"
               />
             </a>
               <div class="card-body">
-                <h5 class="card-title">Samsung A14</h5>
-                <b class="card-text">$ 359.999</b>
+                <h5 class="card-title">Buzo Cebra</h5>
+                <b class="card-text">$ 17.999</b>
                   <p class="text-success">
-                    6 cuotas sin interés de $59.999.83</br>
+                    6 cuotas sin interés de $ 2.999.83</br>
                     <b>Envío gratis</b>
                   </p>
 
                 </p>
-                <a href="./pages/samsunga14.html" class="btn boton-conocermas"
-                  >Comprar</a
-                >
+                <a href="./pages/error404.html" class="btn boton-conocermas">Comprar
+                  </a>
               </div>
             </div>
           </div>
@@ -269,21 +278,21 @@
             class="col-6 col-md-6 col-lg-3 mb-3 d-flex justify-content-between text-center"
           >
             <div class="card">
-              <a href="./pages/samsunga24.html">
+              <a href="./pages/error404.html">
               <img
-                src="../assets/Samsung-A24.avif"
+                src="./assets/hombres/pantalones/1.jpg"
                 class="card-img-top"
-                alt="Samsung A24"
+                alt="Pantalon de hombre de Jean color azul claro"
               />
             </a>
               <div class="card-body">
-                <h5 class="card-title">Samsung A24</h5>
-                <b class="card-text">$ 524.999</b>
+                <h5 class="card-title">Jean Relaxed Fit</h5>
+                <b class="card-text">$ 24.999</b>
                   <p class="text-success">
-                    6 cuotas sin interés de $87.499,83</br>
+                    6 cuotas sin interés de $ 4.166,5 </br>
                     <b>Envío gratis</b>
                   </p>
-                <a href="./pages/samsunga24.html" class="btn boton-conocermas"
+                <a href="./pages/error404.html" class="btn boton-conocermas"
                   >Comprar</a
                 >
               </div>
@@ -295,16 +304,16 @@
             <div class="card">
               <a href="./pages/error404.html">
               <img
-                src="../assets/Samsung-A04.avif"
+                src="./assets/hombres/abrigos/7.jpg"
                 class="card-img-top"
-                alt="Samsung A04S"
+                alt="Camperon Batik de hombre"
               />
             </a>
               <div class="card-body">
-                <h5 class="card-title">Samsung A04S</h5>
-                <b class="card-text">$ 314.999</b>
+                <h5 class="card-title">Camperon Batik</h5>
+                <b class="card-text">$ 44.999</b>
                   <p class="text-success">
-                    6 cuotas sin interés de $52.500</br>
+                    6 cuotas sin interés de $ 7.499,83</br>
                     <b>Envío gratis</b>
                   </p>
                 <a href="./pages/error404.html" class="btn boton-conocermas">Comprar</a>
@@ -317,16 +326,16 @@
             <div class="card">
               <a href="./pages/error404.html">
               <img
-                src="../assets/Samsung-A145G.avif"
+                src="./assets/mujeres/remeras/8.jpg"
                 class="card-img-top"
-                alt="Samsung A145G"
+                alt="Remera Gris con Mangas Anchas"
               />
             </a>
               <div class="card-body">
-                <h5 class="card-title">Samsung A14 5G</h5>
-                <b class="card-text">$ 369.999</b>
+                <h5 class="card-title">Remera 3/4 Gray</h5>
+                <b class="card-text">$ 19.999</b>
                   <p class="text-success">
-                    6 cuotas sin interés de $123.333</br>
+                    6 cuotas sin interés de $ 3.333,16</br>
                     <b>Envío gratis</b>
                   </p>
                 <a href="./pages/error404.html" class="btn boton-conocermas">Comprar</a>
